# pro-solver

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
config/database/: config.py  database.yaml
config/infer/: code_config.yaml  config.yaml  equation_config.yaml  math_config.yaml
pro_solver/benchmark/benchmark_modules/: .burgers1d_benchmark.py.swp  advection1d.py  advection1d_benchmark.py  burgers1d.py  burgers1d_benchmark.py  compressible_ns1d.py  compressible_ns1d_benchmark.py  diff_sorp1d.py  diff_sorp1d_benchmark.py  equation_visualization.py  incomp_ns2d.py  incomp_ns2d_benchmark.py  loss_utils.py  rec_diff.py  rec_diff2d.py  rec_diff2d_benchmark.py  recdiff1d_bemchmark.py  shallow_water2d.py  shallow_water2d_benchmark.py
pro_solver/benchmark/benchmark_modules/Darcy2d/: darcy2d_benchmark.py
pro_solver/benchmark/benchmark_modules/rec_diff/: rec_diff.py  rec_diff_no_rag.py  rec_diff_rag.py  recdiff1d_bemchmark.py
pro_solver/benchmark/data_modules/: data_vars.py  generate_datasets.py  load_data.py
pro_solver/benchmark/dataset/: 1D_CompNS_Sols_subset.hdf5
pro_solver/database/: add_source.py  arxiv_retriever.py  create_database.py
pro_solver/infer/: cfg_utils.py  infer.py  inference.py  inference_with_correction.py  justshit.py  shittyshit.py
pro_solver/infer/vars/: equation_var.py
pro_solver/infer/vars/infer_vars/: code_analyzer_prompt_var.py  code_prompt_var.py  correction_prompt_var.py  equation_var.py  (+3 more)
pro_solver/modules/: collection.py  dataset_load.py  dataset_process.py  github_process.py  pde_prompt.py  text_process.py  text_processing.py
pro_solver/modules/collection/: collection.py
pro_solver/modules/rag_pipeline/: base_model.py  base_pipeline.py  full_pipeline.py  pde_prompt.py
pro_solver/modules/validation/: code_utils.py  output_scheme.py
(+21 files in other folders)
