[project]
name = "pro-solver"
version = "0.1.0"
description = "PDE solving RAG system"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.2",
    "GitPython>=3.1.40",
    "nbformat>=5.10.4",
    "datasets",
    "regex",
    "python-dotenv>=1.0.1",
    "mistralai",
    "langchain>=1.0.3",
    "langchain-core>=1.0.2",
    "langchain-mistralai>=0.2.12",
    "langchain-community>=0.4.1",
    "llama-index==0.9.40",
    "pypdf==4.0.1",
    "numpy>=1.26.2",
    "pandas>=2.0.0",
    "requests>=2.32.5",
    "fire (>=0.7.1,<0.8.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "numba (>=0.62.1,<0.63.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "arxiv (>=2.3.0,<3.0.0)",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
